# demo_sparql_query_executor

./: Cargo.toml  README.md  result.csv
src/: main.rs
