[package]
name = "sparql-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediawiki = "0.2.9"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.94"
tokio = "1.26.0"
wikidata = "0.3.0"
